# legacy_trajectory_model

./: README.md  data.py  main.py  pyproject.toml
outputs_test/CNN/: cnn_predictions.csv
outputs_test/LSTM/: lstm_predictions.csv
outputs_test/RCNN/: rcnn_predictions.csv
src/: cli.py  config.py  main.py
src/cnn/: __init__.py  model.py
src/data/: __init__.py  data_loader.py
src/lstm/: __init__.py  model.py
src/rcnn/: __init__.py  model.py
src/utils/: metrics.py  plotting.py  training.py
